--- a/Java_Jobs/src/main/resources/application.properties
+++ b/Java_Jobs/src/main/resources/application.properties
@@ -11,3 +11,17 @@ server.ssl.key-store-type=JKS
 server.ssl.key-password=${SERVER_SSL_KEY_PASSWORD}
 #server.ssl.key-store=classpath:botham.jks
 server.ssl.key-store=c:\\ks\\botham.jks
+
+
+# DB ONLY
+spring.datasource.url=jdbc:sqlserver://hp-dev\\SQLEXPRESS:1433;DatabaseName=newsclips
+#newsDBUrl=jdbc:sqlserver://hp-dev\\SQLEXPRESS:1433;DatabaseName=newsclips
+spring.datasource.username=sa
+spring.datasource.password=Index123!
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+
+logging.level.com.botham: DEBUG
+logging.level.com.botham.rest.jobs.NewsRestJobsController: DEBUG
+
+logging.level.com.github.dozermapper: DEBUG
