--- a/Java_Jobs/src/main/resources/application.properties
+++ b/Java_Jobs/src/main/resources/application.properties
@@ -20,8 +20,19 @@ spring.datasource.username=sa
 spring.datasource.password=Index123!
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-
+logging.level.com: ERROR
 logging.level.com.botham: DEBUG
 logging.level.com.botham.rest.jobs.NewsRestJobsController: DEBUG
 
 logging.level.com.github.dozermapper: DEBUG
+
+#okta.oauth2.issuer=https://dev-861428.oktapreview.com
+#okta.oauth2.clientId=0oagaw54dhhRKP4qj0h7
+#okta.oauth2.clientSecret=U4-FT2BtRlcvh64JNBCCcDt_6vBoX2tX9wwGnHr6
+#okta.oauth2.audience=1
+#okta.oauth2.scopeClaim=2
+#security.oauth2.sso.loginPath=/authorization-code/callback
+#okta.oauth2.rolesClaim=3
+#okta.client.org-url=http://
+
+
