--- a/Java_Jobs/pom.xml
+++ b/Java_Jobs/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.0.M3</version>
+  <version>2.0.3.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -63,6 +63,16 @@
 </dependency>
 
 
+
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.2</version>
+    <scope>provided</scope>
+</dependency>
+
+
+
 <!-- https://mvnrepository.com/artifact/com.github.dozermapper/dozer-core -->
 <dependency>
     <groupId>com.github.dozermapper</groupId>
@@ -78,8 +88,42 @@
 <!--     <version>5.5.1</version> -->
 <!-- </dependency> -->
 
+<dependency>
+    <groupId>com.okta.sdk</groupId>
+    <artifactId>okta-sdk-api</artifactId>
+    <version>1.2.0</version>
+</dependency>
 
-		
+<dependency>
+    <groupId>com.okta.spring</groupId>
+    <artifactId>okta-spring-boot-starter</artifactId>
+    <version>0.6.0</version>
+</dependency>
+
+
+<!-- <dependency> -->
+<!--     <groupId>io.cucumber</groupId> -->
+<!--     <artifactId>cucumber-java8</artifactId> -->
+<!--     <version>3.0.2</version> -->
+<!--     <scope>test</scope> -->
+<!-- </dependency> -->
+
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-java</artifactId>
+    <version>3.0.2</version>
+    <scope>test</scope>
+</dependency>
+
+
+
+<!-- 		  <dependency> -->
+<!--     <groupId>org.springframework.security.oauth.boot</groupId> -->
+<!--     <artifactId>spring-security-oauth2-autoconfigure</artifactId> -->
+<!--   <version>2.0.5.RELEASE</version> -->
+<!--   </dependency> -->
+  
+  
 	</dependencies>
 
 	<build>
