--- a/Java_Jobs/pom.xml
+++ b/Java_Jobs/pom.xml
@@ -64,6 +64,12 @@
 </dependency>
 
 
+<dependency>
+    <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <!-- <version>42.2.5</version>-->
+</dependency>
+
 
 <dependency>
     <groupId>org.projectlombok</groupId>
