--- a/Java_Jobs/src/main/resources/application.properties
+++ b/Java_Jobs/src/main/resources/application.properties
@@ -15,7 +15,6 @@ server.ssl.key-store=c:\\ks\\botham.jks
 
 # DB ONLY
 spring.datasource.url=jdbc:sqlserver://hp-dev\\SQLEXPRESS:1433;DatabaseName=newsclips
-#newsDBUrl=jdbc:sqlserver://hp-dev\\SQLEXPRESS:1433;DatabaseName=newsclips
 spring.datasource.username=sa
 spring.datasource.password=Index123!
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
@@ -34,5 +33,8 @@ logging.level.com.github.dozermapper: DEBUG
 #security.oauth2.sso.loginPath=/authorization-code/callback
 #okta.oauth2.rolesClaim=3
 #okta.client.org-url=http://
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-
+spring.security.basic.enabled=false
+spring.security.user.password=index123
+spring.security.user.name=steve
