--- a/Java_Jobs/pom.xml
+++ b/Java_Jobs/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -15,8 +16,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-  <version>2.0.4.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<version>2.1.6.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -31,126 +32,123 @@
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 
-	<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-web</artifactId>
-	</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
-			<dependency>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-web</artifactId>
-	</dependency>
-	
-	
-			<dependency>
-	    <groupId>com.botham.news.db</groupId>
-  <artifactId>Java_NewsRepo</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
-				
-<!--  Ensure JDBC driver is loaded (for unit tests)? -->		
-	 	<dependency>
-   <groupId>com.microsoft.sqlserver</groupId>
+
+
+		<dependency>
+			<groupId>com.botham.news.db</groupId>
+			<artifactId>Java_NewsRepo</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+
+		<!-- Ensure JDBC driver is loaded (for unit tests)? -->
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
-			<version>6.3.6.jre8-preview</version>
-  				<scope>compile</scope>
-</dependency>
+			<scope>compile</scope>
+		</dependency>
 
 
-<dependency>
-    <groupId>org.postgresql</groupId>
-    <artifactId>postgresql</artifactId>
-    <!-- <version>42.2.5</version>-->
-</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<!-- <version>42.2.5</version> -->
+		</dependency>
 
 
-<dependency>
-    <groupId>org.projectlombok</groupId>
-    <artifactId>lombok</artifactId>
-    <version>1.18.2</version>
-    <scope>provided</scope>
-</dependency>
-
-
-
-<!-- https://mvnrepository.com/artifact/com.github.dozermapper/dozer-core -->
-<dependency>
-    <groupId>com.github.dozermapper</groupId>
-    <artifactId>dozer-core</artifactId>
-    <version>6.4.0</version>
-</dependency>
-
-
-<!-- https://mvnrepository.com/artifact/net.sf.dozer/dozer -->
-<!-- <dependency> -->
-<!--     <groupId>net.sf.dozer</groupId> -->
-<!--     <artifactId>dozer</artifactId> -->
-<!--     <version>5.5.1</version> -->
-<!-- </dependency> -->
-
-<dependency>
-    <groupId>com.okta.sdk</groupId>
-    <artifactId>okta-sdk-api</artifactId>
-    <version>1.2.0</version>
-</dependency>
-
-<dependency>
-    <groupId>com.okta.spring</groupId>
-    <artifactId>okta-spring-boot-starter</artifactId>
-    <version>0.6.0</version>
-</dependency>
-
-
-<!-- <dependency> -->
-<!--     <groupId>io.cucumber</groupId> -->
-<!--     <artifactId>cucumber-java8</artifactId> -->
-<!--     <version>3.0.2</version> -->
-<!--     <scope>test</scope> -->
-<!-- </dependency> -->
-
-<dependency>
-    <groupId>io.cucumber</groupId>
-    <artifactId>cucumber-java</artifactId>
-    <version>3.0.2</version>
-    <scope>test</scope>
-</dependency>
-
-
-<dependency>
-  <groupId>com.botham.thing</groupId>
-  <artifactId>ThingDomain</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.2</version>
+			<scope>provided</scope>
+		</dependency>
 
 
 
-  
-  
+		<!-- https://mvnrepository.com/artifact/com.github.dozermapper/dozer-core -->
+		<dependency>
+			<groupId>com.github.dozermapper</groupId>
+			<artifactId>dozer-core</artifactId>
+			<version>6.4.0</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/net.sf.dozer/dozer -->
+		<!-- <dependency> -->
+		<!-- <groupId>net.sf.dozer</groupId> -->
+		<!-- <artifactId>dozer</artifactId> -->
+		<!-- <version>5.5.1</version> -->
+		<!-- </dependency> -->
+
+		<dependency>
+			<groupId>com.okta.sdk</groupId>
+			<artifactId>okta-sdk-api</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.okta.spring</groupId>
+			<artifactId>okta-spring-boot-starter</artifactId>
+			<version>0.6.0</version>
+		</dependency>
+
+
+		<!-- <dependency> -->
+		<!-- <groupId>io.cucumber</groupId> -->
+		<!-- <artifactId>cucumber-java8</artifactId> -->
+		<!-- <version>3.0.2</version> -->
+		<!-- <scope>test</scope> -->
+		<!-- </dependency> -->
+
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>3.0.2</version>
+			<scope>test</scope>
+		</dependency>
+
+
+		<dependency>
+			<groupId>com.botham.thing</groupId>
+			<artifactId>ThingDomain</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+
+
+
+
+
 	</dependencies>
 
 	<build>
 		<plugins>
-		<!-- 	<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>-->
-			
-			
+			<!-- <plugin> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-maven-plugin</artifactId> 
+				</plugin> -->
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <skipTests>true</skipTests>
-        </configuration>
-      </plugin>
+
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skipTests>true</skipTests>
+				</configuration>
+			</plugin>
 
 
 		</plugins>
